@@ -1,5 +1,4 @@
 page.call "crm.flick", :empty, :toggle
-page.call "crm.flick", :tasks_flash, :hide
 page.call "crm.flip_form", :create_task
 
 if params[:cancel] != "true"
